@@ -1,6 +1,8 @@
 Revision history for DBIx::Class
 
-	- ensure_class_loaded handles non-classnames better.
+        - DBIx::Class::AccessorGroup made empty subclass of
+          Class::Accessor::Grouped
+        - ensure_class_loaded handles non-classnames better.
         - non-destructive hashref handling for connect_info options
         - count no longer returns negative values after slice
           (report and test from JOHANL)
